--- a/public/monitoring.html
+++ b/public/monitoring.html
@@ -4,6 +4,7 @@
 	  <link href="style.css" rel="stylesheet" type="text/css">
 	</head>
 <body>
+	<script src="coba.js"></script>
         <table width = "100%" border = "0">
         <tr>
         
