--- a/public/monitoring.html
+++ b/public/monitoring.html
@@ -37,12 +37,15 @@
         	<caption>MONITORING</caption>
 	<tbody>
     <tr>
+	 <input type="button" value="Login" onclick="validate()">
         	GARDU =
         <select name="selectionField">
   	<option value="GARDU1" >GARDU 1 </option>
   	<option value="GARDU2" > GARDU 2</option>
   	<option value="GARDU3" >GARDU 3</option>
   	<option value="GARDU4" >GARDU 4</option>
+		
+
 	</select>
     </tr>
 		</tbody></table>
