--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 			<label>Password :</label>
 			<input id="password" name="password"  type="password">
 			
-			<input type="button" name="submit" id="submit" value="Login" onclick="validate()">
+			<input type="button" name="submit" id="submit" value="Login" onclick="try()">
 		  </form>
 		</div>
    </div>
